# notes-mcp-server

./: LICENSE  README.md  main.py  pyproject.toml
models/: types.py
services/: notebook.py
